Update api status with api key
